--- a/packages/accordion/snippets/gray.mdx
+++ b/packages/accordion/snippets/gray.mdx
@@ -1,23 +1,11 @@
 ```jsx
-import { useState, useRef } from 'react';
+import React from 'react';
 
 export const AccordionPage = () => {
-  const [activeItem, setActiveItem] = useState('');
-
-  const toggleActiveItem = (id) => () => {
-    setActiveItem((prevState) => (prevState !== id ? id : ''));
-  };
-
   return (
-    <div>
-      <AccordionHeader
-        id="item-1"
-        activeItem={activeItem}
-        onClick={toggleActiveItem('item-1')}
-      >
-        Accordion Group Item #1
-      </AccordionHeader>
-      <Accordion id="item-1" isOpen={activeItem}>
+    <Accordion>
+      <AccordionItem toggle="section-1">Accordion Group Item #1</AccordionItem>
+      <AccordionPanel id="section-1">
         <p className="mb-4">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -30,15 +18,9 @@ export const AccordionPage = () => {
           ab illo inventore veritatis et quasi architecto beatae vitae dicta
           sunt explicabo.
         </p>
-      </Accordion>
-      <AccordionHeader
-        id="item-2"
-        activeItem={activeItem}
-        onClick={toggleActiveItem('item-2')}
-      >
-        Accordion Group Item #2
-      </AccordionHeader>
-      <Accordion id="item-2" isOpen={activeItem}>
+      </AccordionPanel>
+      <AccordionItem toggle="section-2">Accordion Group Item #2</AccordionItem>
+      <AccordionPanel id="section-2">
         <p className="mb-4">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
           odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla
@@ -51,15 +33,9 @@ export const AccordionPage = () => {
           et quas molestias excepturi sint occaecati cupiditate non provident,
           similique sunt in culpa qui officia deserunt mollitia animi.
         </p>
-      </Accordion>
-      <AccordionHeader
-        id="item-3"
-        activeItem={activeItem}
-        onClick={toggleActiveItem('item-3')}
-      >
-        Accordion Group Item #3
-      </AccordionHeader>
-      <Accordion id="item-3" isOpen={activeItem}>
+      </AccordionPanel>
+      <AccordionItem toggle="section-3">Accordion Group Item #3</AccordionItem>
+      <AccordionPanel id="section-3">
         <p className="mb-4">
           dales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor.
           Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas
@@ -72,62 +48,84 @@ export const AccordionPage = () => {
           litora torquent per conubia nostra, per inceptos himenaeos. Nam nec
           ante.
         </p>
-      </Accordion>
-    </div>
+      </AccordionPanel>
+    </Accordion>
   );
 };
 
 /* Logic */
+
+const Context = React.createContext({});
+
+function Accordion({ children }) {
+  const [selected, setSelected] = React.useState();
+
+  const toggleItem = React.useCallback(
+    (id) => () => {
+      setSelected((prevState) => (prevState !== id ? id : ''));
+    },
+    [],
+  );
+  return (
+    <Context.Provider value={{ selected, toggleItem }}>
+      {children}
+    </Context.Provider>
+  );
+}
+
+//custom hook to consume all accordion values
+const useAccordion = () => React.useContext(Context);
+
 const style = {
-  accordion: `overflow-hidden md:overflow-x-hidden transition-height ease duration-300 text-gray-600`,
-  accordionHeader: `block focus:outline-none bg-gray-800 text-white border-b my-2 p-3`,
+  item: `block focus:outline-none bg-gray-800 text-white border-b my-2 p-3`,
+  panel: `overflow-hidden md:overflow-x-hidden transition-height ease duration-300 text-gray-600`,
 };
 
-const Accordion = ({ children, id, isOpen }) => {
-  const ref = useRef();
+function AccordionItem({ toggle, children }) {
+  const { selected, toggleItem } = useAccordion();
+  return (
+    <div role="button" onClick={toggleItem(toggle)} className={style.item}>
+      {children}
+      <span className="float-right">
+        {selected === toggle ? <AngleUpIcon /> : <AngleDownIcon />}
+      </span>
+    </div>
+  );
+}
+
+function AccordionPanel({ children, id }) {
+  const { selected } = useAccordion();
+  const ref = React.useRef();
   const inlineStyle =
-    isOpen === id ? { height: ref.current?.scrollHeight } : { height: 0 };
+    selected === id ? { height: ref.current?.scrollHeight } : { height: 0 };
 
   return (
-    <div id={id} className={style.accordion} ref={ref} style={inlineStyle}>
+    <div ref={ref} id={id} className={style.panel} style={inlineStyle}>
       {children}
     </div>
   );
-};
+}
 
-const AccordionHeader = ({ activeItem, id, children, ...rest }) => (
-  <div role="button" {...rest} className={style.accordionHeader}>
-    {children}
-    <span className="float-right">
-      {activeItem === id ? (
-        <AngleUpIcon className="mt-1 h-4" />
-      ) : (
-        <AngleDownIcon className="mt-1 h-4" />
-      )}
-    </span>
-  </div>
-);
-
-const AngleUpIcon = (props) => (
+const AngleUpIcon = () => (
   <svg
     fill="white"
     strokeWidth="0"
     viewBox="0 0 320 512"
     xmlns="http://www.w3.org/2000/svg"
-    {...props}
+    className="mt-1 h-4"
   >
     <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
   </svg>
 );
 
-const AngleDownIcon = (props) => (
+const AngleDownIcon = () => (
   <svg
     stroke="currentColor"
     fill="white"
     strokeWidth="0"
     viewBox="0 0 320 512"
     xmlns="http://www.w3.org/2000/svg"
-    {...props}
+    className="mt-1 h-4"
   >
     <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
   </svg>
