--- a/packages/card/snippets/multiple.mdx
+++ b/packages/card/snippets/multiple.mdx
@@ -8,17 +8,17 @@ export const CardPage = () => (
           src="https://res.cloudinary.com/beloved/image/upload/v1608683063/Assets/lamborghini_mxb2j7.jpg"
           alt="Bugatti"
         />
-        <Card.Body>
-          <Card.Title className="text-lg">Lamborghini</Card.Title>
-          <Card.Text>
+        <CardBody>
+          <CardTitle className="text-lg">Lamborghini</CardTitle>
+          <CardText>
             Joe made the sugar cookies; Susan decorated them. When motorists
             sped in and out of traffic.
-          </Card.Text>
+          </CardText>
           <a className="text-indigo-500 inline-flex items-center mt-4 cursor-pointer">
             View Details
             <ArrowIcon />
           </a>
-        </Card.Body>
+        </CardBody>
       </Card>
     </div>
     <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3">
@@ -28,17 +28,17 @@ export const CardPage = () => (
           src="https://res.cloudinary.com/beloved/image/upload/v1608683147/Assets/bugatti-cars-7-free-car-hd-wallpaper_j4xyj6.jpg"
           alt="Bugatti"
         />
-        <Card.Body>
-          <Card.Title className="text-lg">Bugatti</Card.Title>
-          <Card.Text>
+        <CardBody>
+          <CardTitle className="text-lg">Bugatti</CardTitle>
+          <CardText>
             Joe made the sugar cookies; Susan decorated them. When motorists
             sped in and out of traffic.
-          </Card.Text>
+          </CardText>
           <a className="text-indigo-500 inline-flex items-center mt-4 cursor-pointer">
             View Details
             <ArrowIcon />
           </a>
-        </Card.Body>
+        </CardBody>
       </Card>
     </div>
     <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3">
@@ -48,44 +48,54 @@ export const CardPage = () => (
           src="https://res.cloudinary.com/beloved/image/upload/v1599343428/Assets/3_znyzrd.jpg"
           alt="blog"
         />
-        <Card.Body>
-          <Card.Title className="text-lg">Computer</Card.Title>
-          <Card.Text>
+        <CardBody>
+          <CardTitle className="text-lg">Computer</CardTitle>
+          <CardText>
             Joe made the sugar cookies; Susan decorated them. When motorists
             sped in and out of traffic.
-          </Card.Text>
+          </CardText>
           <a className="text-indigo-500 inline-flex items-center mt-4 cursor-pointer">
             View Details
             <ArrowIcon />
           </a>
-        </Card.Body>
+        </CardBody>
       </Card>
     </div>
   </div>
 );
 
 /* Logic */
+
 const style = {
   card: `relative flex flex-col border-2 border-gray-200 rounded-lg`,
   cardBody: `block flex-grow flex-shrink p-5`,
   cardTitle: `font-medium text-gray-700 mb-3`,
   cardText: `text-gray-500`,
 };
+
 const inlineStyle = {
   boxShadow: '0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%)',
 };
 
-const Card = ({ children }) => (
-  <div className={style.card} style={inlineStyle}>
-    {children}
-  </div>
-);
+function Card({ children }) {
+  return (
+    <div className={style.card} style={inlineStyle}>
+      {children}
+    </div>
+  );
+}
 
-Card.Body = ({ children }) => <div className={style.cardBody}>{children}</div>;
-Card.Title = ({ children }) => (
-  <div className={style.cardTitle}>{children}</div>
-);
-Card.Text = ({ children }) => <div className={style.cardText}>{children}</div>;
+function CardBody({ children }) {
+  return <div className={style.cardBody}>{children}</div>;
+}
+
+function CardTitle({ children }) {
+  return <div className={style.cardTitle}>{children}</div>;
+}
+
+function CardText({ children }) {
+  return <div className={style.cardText}>{children}</div>;
+}
 
 const ArrowIcon = () => (
   <svg
