--- a/packages/drawer/snippets/simple.mdx
+++ b/packages/drawer/snippets/simple.mdx
@@ -1,10 +1,11 @@
 ```jsx
-import { useEffect, useRef, useState } from 'react';
+import React from 'react';
+
 /* You'll need to install @reach/portal which simplify creating portal*/
 import Portal from '@reach/portal';
 
 export const DrawerPage = () => {
-  const [isOpen, setIsOpen] = useState(false);
+  const [isOpen, setIsOpen] = React.useState(false);
 
   const toggle = () => {
     setIsOpen(!isOpen);
@@ -41,63 +42,65 @@ export const DrawerPage = () => {
 /* Logic */
 
 const style = {
-  container: `fixed top-0 left-0 z-40 w-full h-full m-0 overflow-hidden`,
   animation: {
     left: 'animate-drawer-left',
   },
-  content: `relative flex flex-col bg-white pointer-events-auto`,
   orientation: {
     left: `flex w-8/12 md:w-80 lg:w-96 h-full left-0 mx-0 my-0 absolute focus:outline-none `,
   },
+  body: `flex-shrink flex-grow p-4`,
+  headerTitle: `text-2xl md:text-3xl font-light`,
+  content: `relative flex flex-col bg-white pointer-events-auto`,
+  header: `items-start justify-between p-4 border-b border-gray-300`,
+  container: `fixed top-0 left-0 z-40 w-full h-full m-0 overflow-hidden`,
   overlay: `fixed top-0 left-0 z-30 w-screen h-screen bg-black opacity-50`,
+  footer: `flex flex-wrap items-center justify-end p-3 border-t border-gray-300`,
 };
 
-const Drawer = ({ children, isOpen, toggle }) => {
-  const ref = useRef(null);
+function Drawer({ children, isOpen, toggle }) {
+  const ref = React.useRef(null);
 
-  // close drawer when you click outside the dialog
-  useEffect(() => {
+  React.useEffect(() => {
     const handleOutsideClick = (event) => {
-      if (!ref?.current?.contains(event.target)) {
+      if (!ref.current?.contains(event.target)) {
         if (!isOpen) return;
         toggle(false);
       }
     };
     window.addEventListener('click', handleOutsideClick);
     return () => window.removeEventListener('click', handleOutsideClick);
-  }, [isOpen, ref]);
+  }, [isOpen, ref, toggle]);
 
   // close drawer when you click on "ESC" key
-  useEffect(() => {
+  React.useEffect(() => {
     const handleEscape = (event) => {
       if (!isOpen) return;
+
       if (event.key === 'Escape') {
         toggle(false);
       }
     };
     document.addEventListener('keyup', handleEscape);
     return () => document.removeEventListener('keyup', handleEscape);
-  }, [isOpen]);
+  }, [isOpen, toggle]);
 
-  //hide scrollbar and prevent body from moving when drawer is open
-  useEffect(() => {
+  // hide scrollbar and prevent body from moving when modal is open
+  //put focus on modal dialogue
+  React.useEffect(() => {
     if (!isOpen) return;
-
-    // Put focus on drawer
     ref.current?.focus();
 
     const html = document.documentElement;
 
-    const overflow = html.style.overflow;
-    const paddingRight = html.style.paddingRight;
-    const scrollbarWidth = window.innerWidth - html.clientWidth;
+    const scrollbarWidth =
+      window.innerWidth - document.documentElement.clientWidth;
 
     html.style.overflow = 'hidden';
     html.style.paddingRight = `${scrollbarWidth}px`;
 
     return () => {
-      html.style.overflow = overflow;
-      html.style.paddingRight = paddingRight;
+      html.style.overflow = '';
+      html.style.paddingRight = '';
     };
   }, [isOpen]);
 
@@ -123,5 +126,5 @@ const Drawer = ({ children, isOpen, toggle }) => {
       )}
     </Portal>
   );
-};
+}
 ```
