--- a/packages/drawer/snippets/top.mdx
+++ b/packages/drawer/snippets/top.mdx
@@ -1,11 +1,11 @@
 ```jsx
-import { useEffect, useRef, useState } from 'react';
+import React from 'react';
 
 /* You'll need to install @reach/portal which simplify creating portal*/
 import Portal from '@reach/portal';
 
 export const DrawerPage = () => {
-  const [isOpen, setIsOpen] = useState(false);
+  const [isOpen, setIsOpen] = React.useState(false);
 
   const toggle = () => {
     setIsOpen(!isOpen);
@@ -21,14 +21,14 @@ export const DrawerPage = () => {
         Click to open me
       </button>
       <Drawer isOpen={isOpen} toggle={toggle} position="left">
-        <Drawer.Header>Drawer title</Drawer.Header>
-        <Drawer.Body>
+        <DrawerHeader>Drawer title</DrawerHeader>
+        <DrawerBody>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat.
-        </Drawer.Body>
-        <Drawer.Footer>
+        </DrawerBody>
+        <DrawerFooter>
           <button
             onClick={toggle}
             className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-red-500"
@@ -41,7 +41,7 @@ export const DrawerPage = () => {
           >
             Confirm
           </button>
-        </Drawer.Footer>
+        </DrawerFooter>
       </Drawer>
     </div>
   );
@@ -50,67 +50,65 @@ export const DrawerPage = () => {
 /* Logic */
 
 const style = {
-  body: `flex-shrink flex-grow p-4`,
-  container: `fixed top-0 left-0 z-40 w-full h-full m-0 overflow-hidden`,
   animation: {
     top: 'animate-drawer-top',
   },
-  content: `relative flex flex-col bg-white pointer-events-auto`,
-  footer: `flex flex-wrap items-center justify-end p-3 border-t border-gray-300`,
-  header: `items-start justify-between p-4 border-b border-gray-300`,
-  headerTitle: `text-2xl md:text-3xl font-light`,
   orientation: {
     top: `flex w-full h-auto absolute top-0 focus:outline-none `,
   },
+  body: `flex-shrink flex-grow p-4`,
+  headerTitle: `text-2xl md:text-3xl font-light`,
+  content: `relative flex flex-col bg-white pointer-events-auto`,
+  header: `items-start justify-between p-4 border-b border-gray-300`,
+  container: `fixed top-0 left-0 z-40 w-full h-full m-0 overflow-hidden`,
   overlay: `fixed top-0 left-0 z-30 w-screen h-screen bg-black opacity-50`,
+  footer: `flex flex-wrap items-center justify-end p-3 border-t border-gray-300`,
 };
 
-const Drawer = ({ children, isOpen, toggle }) => {
-  const ref = useRef(null);
+function Drawer({ children, isOpen, toggle }) {
+  const ref = React.useRef(null);
 
-  // close modal when you click outside the dialog
-  useEffect(() => {
+  React.useEffect(() => {
     const handleOutsideClick = (event) => {
-      if (!ref?.current?.contains(event.target)) {
+      if (!ref.current?.contains(event.target)) {
         if (!isOpen) return;
         toggle(false);
       }
     };
     window.addEventListener('click', handleOutsideClick);
     return () => window.removeEventListener('click', handleOutsideClick);
-  }, [isOpen, ref]);
+  }, [isOpen, ref, toggle]);
 
-  // close modal when you click on "ESC" key
-  useEffect(() => {
+  // close drawer when you click on "ESC" key
+  React.useEffect(() => {
     const handleEscape = (event) => {
       if (!isOpen) return;
+
       if (event.key === 'Escape') {
         toggle(false);
       }
     };
     document.addEventListener('keyup', handleEscape);
     return () => document.removeEventListener('keyup', handleEscape);
-  }, [isOpen]);
+  }, [isOpen, toggle]);
 
-  //hide scrollbar and prevent body from moving when drawer is open
-  useEffect(() => {
+  // hide scrollbar and prevent body from moving when modal is open
+  //put focus on modal dialogue
+  React.useEffect(() => {
     if (!isOpen) return;
-
-    // Put focus on drawer
     ref.current?.focus();
 
     const html = document.documentElement;
 
-    const overflow = html.style.overflow;
-    const paddingRight = html.style.paddingRight;
-    const scrollbarWidth = window.innerWidth - html.clientWidth;
+    const scrollbarWidth =
+      window.innerWidth - document.documentElement.clientWidth;
 
     html.style.overflow = 'hidden';
     html.style.paddingRight = `${scrollbarWidth}px`;
 
     return () => {
-      html.style.overflow = overflow;
-      html.style.paddingRight = paddingRight;
+      html.style.overflow = '';
+      html.style.paddingRight = '';
     };
   }, [isOpen]);
 
@@ -121,11 +119,11 @@ const Drawer = ({ children, isOpen, toggle }) => {
           <div className={style.overlay} />
           <div className={style.container}>
             <div
-              aria-modal={true}
-              className={style.orientation.top}
               ref={ref}
-              role="dialogue"
               tabIndex={-1}
+              aria-modal={true}
+              role="dialogue"
+              className={style.orientation.top}
             >
               <div className={`${style.animation.top} ${style.content}`}>
                 {children}
@@ -136,17 +134,21 @@ const Drawer = ({ children, isOpen, toggle }) => {
       )}
     </Portal>
   );
-};
+}
 
-Drawer.Header = ({ children }) => (
-  <div className={style.header}>
-    <h4 className={style.headerTitle}>{children}</h4>
-  </div>
-);
+function DrawerHeader({ children }) {
+  return (
+    <div className={style.header}>
+      <h4 className={style.headerTitle}>{children}</h4>
+    </div>
+  );
+}
 
-Drawer.Body = ({ children }) => <div className={style.body}>{children}</div>;
+function DrawerBody({ children }) {
+  return <div className={style.body}>{children}</div>;
+}
 
-Drawer.Footer = ({ children }) => (
-  <div className={style.footer}>{children}</div>
-);
+function DrawerFooter({ children }) {
+  return <div className={style.footer}>{children}</div>;
+}
 ```
