--- a/packages/list-group/snippets/colored.mdx
+++ b/packages/list-group/snippets/colored.mdx
@@ -1,24 +1,26 @@
 ```jsx
-export const ColoredListGroupPage = () => (
-  <ListGroup>
-    <ListGroup.Item className="bg-blue-700">First Item</ListGroup.Item>
-    <ListGroup.Item className="bg-green-700">Second Item</ListGroup.Item>
-    <ListGroup.Item className="bg-purple-900">Third Item</ListGroup.Item>
-  </ListGroup>
+export const ListGroupPage = () => (
+  <div className="w-full md:w-4/12">
+    <ListGroup>
+      <ListGroupItem className="bg-blue-700">First Item</ListGroupItem>
+      <ListGroupItem className="bg-green-700">Second Item</ListGroupItem>
+      <ListGroupItem className="bg-purple-900">Third Item</ListGroupItem>
+    </ListGroup>
+  </div>
 );
 
-const ListGroup = ({ children }) => (
-  <ul className="list-reset flex flex-col pl-0 mb-0 w-full md:w-4/12">
-    {children}
-  </ul>
-);
+function ListGroup({ children }) {
+  return <ul className="list-reset flex flex-col pl-0 mb-0">{children}</ul>;
+}
 
-ListGroup.Item = ({ children, className }) => (
-  <a
-    tabIndex={0}
-    className={`${className} relative block py-3 px-5 relative -mb-px block border border-grey`}
-  >
-    {children}
-  </a>
-);
+function ListGroupItem({ children, className }) {
+  return (
+    <a
+      tabIndex={0}
+      className={`${className} relative block py-3 px-5 relative -mb-px block border border-grey`}
+    >
+      {children}
+    </a>
+  );
+}
 ```
