--- a/packages/list-group/snippets/link.mdx
+++ b/packages/list-group/snippets/link.mdx
@@ -1,31 +1,32 @@
 ```jsx
-export const ListGroupLinkPage = () => (
-  <ListGroup>
-    <ListGroup.Item className="cursor-pointer hover:bg-gray-300" href="#">
-      First Item
-    </ListGroup.Item>
-    <ListGroup.Item className="cursor-pointer hover:bg-gray-300" href="#">
-      Second Item
-    </ListGroup.Item>
-    <ListGroup.Item className="cursor-pointer hover:bg-gray-300" href="#">
-      Third Item
-    </ListGroup.Item>
-  </ListGroup>
+export const ListGroupPage = () => (
+  <div className="w-full md:w-4/12">
+    <ListGroup>
+      <ListGroupItem className="cursor-pointer hover:bg-gray-300" href="#">
+        First Item
+      </ListGroupItem>
+      <ListGroupItem className="cursor-pointer hover:bg-gray-300" href="#">
+        Second Item
+      </ListGroupItem>
+      <ListGroupItem className="cursor-pointer hover:bg-gray-300" href="#">
+        Third Item
+      </ListGroupItem>
+    </ListGroup>
+  </div>
 );
 
-const ListGroup = ({ children }) => (
-  <ul className="list-reset flex flex-col pl-0 mb-0 w-full md:w-4/12">
-    {children}
-  </ul>
-);
+function ListGroup({ children }) {
+  return <ul className="list-reset flex flex-col pl-0 mb-0">{children}</ul>;
+}
 
-/* You can wrap the a tag with Link and pass href prop to Link if you are using either Create-React-App, Next.js or Gatsby */
-ListGroup.Item = ({ children, className, href }) => (
-  <a
-    href={href}
-    className={`${className} relative block py-3 px-5 relative -mb-px block border border-grey`}
-  >
-    {children}
-  </a>
-);
+function ListGroupItem({ children, className, href }) {
+  return (
+    <a
+      href={href}
+      className={`${className} relative block py-3 px-5 relative -mb-px block border border-grey`}
+    >
+      {children}
+    </a>
+  );
+}
 ```
